# OpenCV-GpuMat-NVIDIA-VIDEO-SDK-Encoder-Sample

./: LICENSE.md  README.md
AppEncOpenCV/: AppEncOpenCV.cpp  CMakeLists.txt
